iac/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postech-api
  namespace: postech-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postech-api
  template:
    metadata:
      labels:
        app: postech-api
    spec:
      containers:
      - name: postech-api
        image: 807023255505.dkr.ecr.us-east-1.amazonaws.com/postech-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
