iac/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postech-api-service
  namespace: postech-api
spec:
  selector:
    app: postech-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
